name:                socks-server
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             OtherLicense
license-file:        LICENSE
author:              Gregor Kopf
maintainer:          code@gregorkopf.de
category:            Network
build-type:          Simple

cabal-version:       >=1.10

library
  exposed-modules:   Network.Socks.Protocol, Network.Socks.Server
  
  build-depends:       base >=4.7 && <4.8, network >=2.4 && <2.5, hslogger >=1.2 && <1.3, attoparsec >=0.11 && <0.12, bytestring >=0.10 && <0.11, iproute >=1.2 && <1.3
  default-language:    Haskell2010
  
